@@ -1,3 +1,11 @@
+2010-10-23  Alex Schroeder  <alex@gnu.org>
+
+	* modules/referrer-tracking.pl: Updated license to GPL 3.
+	(ExpireReferers): Moved code to generate missing title to a new sub.
+	(UrlToTitle): New.
+	(UpdateReferers): Call sub to generate title from page content.
+	(PageContentToTitle): New.
+
 2010-10-10  Alex Schroeder  <alex@gnu.org>
 
 	* modules/gravatar.pl (GravatarNewGetSummary): New; strip gravatar
